k8s/prod/yolo5.yaml
# k8s/deployment-demo.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: yolo5-deployment
  labels:
    app: yolo5
spec:
  replicas: 1
  selector:
    matchLabels:
      app: yolo5
  template:
    metadata:
      labels:
        app: yolo5
    spec:
      containers:
      - name: yolov5
        image: moshikozana/cicd-yolo:14
