k8s/prod/Polybot.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: polybot
  labels:
    app: poly
spec:
  replicas: 1
  selector:
    matchLabels:
      app: poly
  template:
    metadata:
      labels:
        app: poly
    spec:
      volumes:
        - name: tls-volume
          secret:
            secretName: tls-secret
      containers:
      - name: poly
        image: moshikozana/poly-aws:latestv2
        volumeMounts:
        - name: tls-volume
          readOnly: true
          mountPath: "/tls-volume"
        resources:
          requests:
            memory: "100Mi"
            cpu: "100m"
          limits:
            memory: "200Mi"
            cpu: "200m"
        readinessProbe:
          httpGet:
            path: "/ready"
            port: 8443
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: "/"
            port: 8443
          initialDelaySeconds: 10
          periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: poly-service
spec:
  selector:
    app: poly
  ports:
    - protocol: TCP
      port: 8443
      targetPort: 8443
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: polybot-ingress
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - moshiko-bot.devops-int-college.com
    secretName: tls-secret
  rules:
  - host: moshiko-bot.devops-int-college.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: poly-service
            port:
              number: 8443
